--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "connect-flash": "^0.1.1",
-    "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.0",
     "mongodb": "^6.9.0",
